# dzengi-sdk-python

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
aidlc-docs/: aidlc-state.md  audit.md
aidlc-docs/inception/plans/: execution-plan.md
aidlc-docs/inception/requirements/: requirements.md
dzengi_com_client/: __init__.py  client.py  enums.py  exceptions.py  logger.py
dzengi_com_client/api/: account.py  base.py  leverage.py  market.py  order.py
tests/: test_account.py  test_client.py  test_leverage.py  test_market.py  test_order.py
tests/e2e/: test_e2e_account.py  test_e2e_positions.py
