[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dzengi-com-client"
version = "0.1.0"
description = "Unofficial dzengi.com SDK for Python"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["requests>=2.28.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-mock>=3.10.0", "responses>=0.23.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["dzengi_com_client*"]
